--- a/frontend/html/welcome.html
+++ b/frontend/html/welcome.html
@@ -182,8 +182,8 @@
         <li><a href="#">How it works</a></li>
       </ul>
       <div class="nav-buttons">
-        <a href="login.html" class="login">Log In</a>
-        <a href="register.html" class="signup">Sign Up</a>
+        <a href="../frontend/html/login.php" class="login">Log In</a>
+        <a href="../frontend/html/register.php" class="signup">Sign Up</a>
       </div>
     </header>
     <div class="container">
@@ -195,22 +195,22 @@
         </p>
         <div class="cta-buttons">
           <button class="get-started">
-            <a href="login.html">Get Started</a>
+            <a href="../frontend/html/login.php">Get Started</a>
           </button>
           <button class="learn-more">
-            <a href="register.html">Create Your Account Now</a>
+            <a href="../frontend/html/register.php">Create Your Account Now</a>
           </button>
         </div>
       </div>
       <div class="right-section">
         <div class="card">
           <img
-            src="../assets/front_card.png"
+            src="../frontend/assets/front_card.png"
             class="front"
             alt="Front of the Bank Card"
           />
           <img
-            src="../assets/back_card.png"
+            src="../frontend/assets/back_card.png"
             class="back"
             alt="Back of the Bank Card"
           />
