--- a/frontend/html/welcome.html
+++ b/frontend/html/welcome.html
@@ -3,219 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NextGen Banking - Secure & Innovative</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: Arial, sans-serif;
-      }
-      body {
-        background: #0d0d0d;
-        color: white;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: 100vh;
-        overflow: hidden;
-        position: relative;
-        background: radial-gradient(circle at top, #3b3b3b, #0d0d0d);
-      }
-
-      /* Adding glowing light effect */
-      body::before {
-        content: "";
-        position: absolute;
-        top: 190px;
-        left: 43%;
-        width: 400px;
-        height: 400px;
-        background: radial-gradient(
-          circle,
-          rgba(215, 105, 255, 0.959),
-          transparent
-        );
-        transform: translateX(40%);
-        filter: blur(50px);
-        z-index: -1;
-      }
-
-      .navbar {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 15px 50px;
-        background: #1c1c1c;
-      }
-      .logo {
-        font-size: 22px;
-        font-weight: bold;
-        color: white;
-      }
-      .logo span {
-        color: gold;
-      }
-      .nav-links {
-        list-style: none;
-        display: flex;
-      }
-      .nav-links li {
-        margin: 0 15px;
-      }
-      .nav-links a,
-      a {
-        text-decoration: none;
-        color: white;
-        font-size: 16px;
-        transition: 0.3s;
-      }
-      .nav-links a:hover {
-        color: gold;
-      }
-      .nav-buttons {
-        display: flex;
-        align-items: center;
-      }
-      .login {
-        margin-right: 15px;
-        color: white;
-        text-decoration: none;
-      }
-      .signup {
-        background: gold;
-        color: black;
-        padding: 8px 16px;
-        border-radius: 5px;
-        text-decoration: none;
-        font-weight: bold;
-        transition: 0.3s;
-      }
-      .signup:hover {
-        background: white;
-        color: gold;
-      }
-      .container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 80%;
-        height: 100%;
-      }
-      .left-section {
-        flex: 1;
-        max-width: 500px;
-      }
-      .left-section h1 {
-        font-size: 3rem;
-        font-weight: bold;
-      }
-      .left-section p {
-        font-size: 1.2rem;
-        margin-top: 10px;
-        color: #bdbdbd;
-      }
-      .cta-buttons {
-        margin-top: 20px;
-        display: flex;
-        gap: 15px;
-      }
-      .cta-buttons button {
-        padding: 10px 20px;
-        border: none;
-        cursor: pointer;
-        font-size: 1rem;
-        border-radius: 5px;
-      }
-      .get-started {
-        background: gold;
-        color: black;
-        font-weight: bold;
-      }
-      .learn-more {
-        background: transparent;
-        border: 2px solid white;
-        color: white;
-      }
-      .right-section {
-        flex: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        perspective: 1000px;
-      }
-      .card {
-        width: 300px;
-        height: 180px;
-        position: relative;
-        transform-style: preserve-3d;
-        animation: rotate 5s linear infinite;
-      }
-      .card img {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        backface-visibility: hidden;
-        border-radius: 15px;
-      }
-      .card .back {
-        transform: rotateY(180deg);
-      }
-      @keyframes rotate {
-        0% {
-          transform: rotateY(0deg);
-        }
-        50% {
-          transform: rotateY(180deg);
-        }
-        100% {
-          transform: rotateY(360deg);
-        }
-      }
-    </style>
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../frontend/css/welcome_style.css" />
+    <title>Bienvenu sur FI-Plan</title>
   </head>
   <body>
-    <header class="navbar">
-      <div class="logo">FI-<span>Plan</span></div>
-      <ul class="nav-links">
-        <li><a href="#">How it works</a></li>
+    <nav>
+      <div class="nav__header">
+        <div class="nav__logo">
+          <a href="../html/login.php">FI<span>Plan</span></a>
+        </div>
+        <div class="nav__menu__btn" id="menu-btn">
+          <span><i class="ri-menu-line"></i></span>
+        </div>
+      </div>
+      <ul class="nav__links" id="nav-links">
+        <li><a href="#about">À propos</a></li>
       </ul>
-      <div class="nav-buttons">
-        <a href="../frontend/html/login.php" class="login">Log In</a>
-        <a href="../frontend/html/register.php" class="signup">Sign Up</a>
+      <div class="nav__btns">
+        <button class="btn sign__up"><a href="../frontend/html/register.php" style="text-decoration: none;  color: inherit;">S'inscrire</a></button>
+        <button class="btn sign__in"> <a href="../frontend/html/login.php" style="text-decoration: none;  color: inherit;">Se connecter</a></button>
+      </div>
+    </nav>
+    <header class="header__container">
+      <div class="header__image">
+        <div class="header__image__card header__image__card-1">
+          <span><i class="ri-graduation-cap-line"></i></span>
+          Job étudiant
+        </div>
+        <div class="header__image__card header__image__card-2">
+          <span><i class="ri-book-shelf-fill"></i></span>
+          Bourse
+        </div>
+        <div class="header__image__card header__image__card-3">
+          <span><i class="ri-coupon-3-line"></i></i></span>
+          Billets de train
+        </div>
+        <div class="header__image__card header__image__card-4">
+          <span> <i class="ri-home-4-line"></i> </span>
+          Loyer
+        </div>
+        <img src="../frontend/assets/header2.png" alt="header" />
+      </div>
+      <div class="header__content">
+        <h1>
+            C’EST PARTI ! <br />PRENDS EN MAIN TES<span> FINANCES</span> DÈS
+            MAINTENANT!
+          </h1>
+          <p>
+            Gère ton argent facilement, développe de bonnes habitudes financières
+            et construis un avenir serein grâce à FI-Plan ton allié pour une
+            gestion simple, intelligente et adaptée à la vie étudiante.
+          </p>
+       
+          <button type="submit"> <a href="../frontend/html/register.php" style="text-decoration: none;  color: inherit;">Rejoindre FI-Plan</a></button>
+        <div class="bar" id="about">
+            Project réalisé par Hiba Kezibri & Hinda Habib | 2025 PSL
+        </div>
       </div>
     </header>
-    <div class="container">
-      <div class="left-section">
-        <h1>FI-Plan - Student Financial Management</h1>
-        <p>
-          Experience the future of budgeting and complete financial control at
-          your fingertips.
-        </p>
-        <div class="cta-buttons">
-          <button class="get-started">
-            <a href="../frontend/html/login.php">Get Started</a>
-          </button>
-          <button class="learn-more">
-            <a href="../frontend/html/register.php">Create Your Account Now</a>
-          </button>
-        </div>
-      </div>
-      <div class="right-section">
-        <div class="card">
-          <img
-            src="../frontend/assets/front_card.png"
-            class="front"
-            alt="Front of the Bank Card"
-          />
-          <img
-            src="../frontend/assets/back_card.png"
-            class="back"
-            alt="Back of the Bank Card"
-          />
-        </div>
-      </div>
-    </div>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="../frontend/js/welcomeScript.js"></script>
   </body>
 </html>
